<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_audio"
        android:title="@string/menu_item_audio"
        android:orderInCategory="100"
        android:icon="@drawable/ic_audio"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_image"
        android:title="@string/menu_item_image"
        android:orderInCategory="110"
        android:icon="@drawable/ic_image"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_photo"
        android:title="@string/menu_item_photo"
        android:orderInCategory="120"
        android:icon="@drawable/ic_photo"
        app:showAsAction="always" />

</menu>