<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_nota"
        android:title="@string/menu_item_editnota"
        android:orderInCategory="100"
        android:icon="@drawable/ic_edit"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_delete_nota"
        android:title="@string/menu_item_deletenota"
        android:orderInCategory="120"
        android:icon="@drawable/ic_delete"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_share_nota"
        android:title="@string/menu_item_sharenota"
        android:orderInCategory="130"
        android:icon="@drawable/ic_share"
        app:showAsAction="collapseActionView|ifRoom" />

</menu>