<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/addImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cd_image"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewNota"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="Autofill">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/addTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/notas_titulo"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/addBody"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:background="@null"
                        android:fontFamily="@font/roboto"
                        android:gravity="start"
                        android:hint="@string/notas_cuerpo"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="8dp"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/addEtiqueta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:hint="@string/notas_etiqueta"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="italic|bold" />

                    <ImageView
                        android:id="@+id/addAudio"
                        android:layout_width="40dp"
                        android:clickable="true"
                        android:layout_height="40dp"
                        android:tint="@color/colorPrimaryDark"
                        android:contentDescription="@string/cd_image"
                        android:visibility="gone"
                        android:layout_marginBottom="8dp"
                        app:srcCompat="@drawable/ic_audio"
                        android:focusable="true" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardViewReminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:strokeWidth="0.5dp"
                        app:strokeColor="#000000"
                        android:visibility="gone"
                        android:onClick="deleteReminder"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="16dp" >
                        <TextView
                            android:id="@+id/reminder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_alarm_set"
                            android:drawablePadding="8dp"
                            android:layout_marginStart="6dp"
                            android:layout_marginEnd="6dp"
                            android:padding="4dp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            tools:text="1 ene.2020, 20:30"
                            android:textSize="14sp"
                            android:textStyle="italic" />

                    </com.google.android.material.card.MaterialCardView>

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarStyle"
                        android:paddingBottom="8dp"
                        android:scrollbars="none">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="6dp"
                            android:orientation="horizontal"
                            android:scrollbars="horizontal">

                            <Button
                                android:id="@+id/white"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/circle"
                                style="?android:buttonBarButtonStyle"
                                android:foregroundTint="@color/white"
                                android:onClick="buttonColor" />

                            <Button
                                android:id="@+id/c1"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="10dp"
                                style="?android:buttonBarButtonStyle"
                                android:background="@drawable/circle"
                                android:backgroundTint="@color/c1"
                                android:onClick="buttonColor" />

                            <Button
                                android:id="@+id/c2"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/circle"
                                android:backgroundTint="@color/c2"
                                style="?android:buttonBarButtonStyle"
                                android:onClick="buttonColor" />

                            <Button
                                android:id="@+id/c3"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/circle"
                                android:backgroundTint="@color/c3"
                                style="?android:buttonBarButtonStyle"
                                android:onClick="buttonColor" />

                            <Button
                                android:id="@+id/c4"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/circle"
                                android:backgroundTint="@color/c4"
                                style="?android:buttonBarButtonStyle"
                                android:onClick="buttonColor" />

                            <Button
                                android:id="@+id/c5"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/circle"
                                android:backgroundTint="@color/c5"
                                style="?android:buttonBarButtonStyle"
                                android:onClick="buttonColor" />

                            <Button
                                android:id="@+id/c6"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/circle"
                                style="?android:buttonBarButtonStyle"
                                android:backgroundTint="@color/c6"
                                android:onClick="buttonColor" />

                            <Button
                                android:id="@+id/c7"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="10dp"
                                style="?android:buttonBarButtonStyle"
                                android:background="@drawable/circle"
                                android:backgroundTint="@color/c7"
                                android:onClick="buttonColor" />

                            <Button
                                android:id="@+id/c8"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="10dp"
                                style="?android:buttonBarButtonStyle"
                                android:background="@drawable/circle"
                                android:backgroundTint="@color/c8"
                                android:onClick="buttonColor" />

                            <Button
                                android:id="@+id/c9"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="10dp"
                                style="?android:buttonBarButtonStyle"
                                android:background="@drawable/circle"
                                android:backgroundTint="@color/c9"
                                android:onClick="buttonColor" />

                            <Button
                                android:id="@+id/c10"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                style="?android:buttonBarButtonStyle"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/circle"
                                android:backgroundTint="@color/c10"
                                android:onClick="buttonColor" />

                        </LinearLayout>

                    </HorizontalScrollView>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar_footer_edit"
                        style="ToolbarTheme"
                        android:layout_width="match_parent"
                        android:layout_height="32dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</ScrollView>

